<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id ="@+id/name_scene"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity ="center"
        android:hint="@string/name_scene"
        android:inputType="textMultiLine"
        android:lines="1" />
    <Button
        android:id="@+id/annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/btn_annuler"
        android:layout_below ="@id/name_scene"
        android:layout_marginLeft="25dip"/>
    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/btn_ok"
        android:layout_below ="@id/name_scene"
        android:layout_toRightOf="@id/annuler"
        android:layout_marginLeft="25dip"/>

</RelativeLayout>