<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/color"
            android:text="@string/color"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp">

        </TextView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >


            <ImageView
                android:id="@+id/android_picture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:src="@drawable/colors"/>

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_marginTop="28dp"
                android:max="65536"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                >

            </SeekBar>

        </RelativeLayout>

        <TextView
            android:id="@+id/brightness"
            android:text="@string/brightness"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp">

        </TextView>

        <SeekBar
            android:id="@+id/seekBar4"
            android:max="256"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp">

        </SeekBar>

        <TextView
            android:id="@+id/saturation"
            android:text="@string/saturation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp">

        </TextView>

        <SeekBar
            android:id="@+id/seekBar3"
            android:max="250"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp">

        </SeekBar>


    </LinearLayout>



</ScrollView>